--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ Stable tag: 1.0.0
 Requires PHP: 5.6
 License: GNU General Public License v3.0 or later
 
-== Changelog ==
+=== Changelog ===
 
 = x-x-x =
 * Initial Release
